# JPortal-ext

./: README.md
decode/: CMakeLists.txt
decode/include/decoder/: decode_data.hpp  decode_data_output.hpp  decode_result.hpp  jvm_dump_decoder.hpp  output_decode.hpp  pevent.hpp  pt_insn.hpp  pt_jvm_decoder.hpp  ptjvm_decoder.hpp  sideband_decoder.hpp  trace_splitter.hpp
decode/include/insn/: pt_asid.hpp  pt_ild.hpp  pt_insn.hpp  pt_insn_decode.hpp  pt_retstack.hpp  pti-disp-defs.hpp  pti-disp.hpp  pti-disp_default.hpp  pti-imm-defs.hpp  pti-imm.hpp  pti-modrm-defs.hpp  pti-modrm.hpp  pti-sib.hpp
decode/include/java/: analyser.hpp  block.hpp  buffer_stream.hpp  bytecodes.hpp  class_file_parser.hpp  class_file_stream.hpp  constant_pool.hpp  definitions.hpp  klass.hpp  method.hpp  type_defs.hpp
decode/include/java-pt/: codelets_entry.hpp  decode_result.hpp
decode/include/output/: decode_output.hpp  output_decode.hpp  output_frame.hpp
decode/include/pt/: pt.hpp  pt_compiler.hpp  pt_config.hpp  pt_decoder_function.hpp  pt_event_queue.hpp  pt_last_ip.hpp  pt_opcodes.hpp  pt_packet.hpp  pt_packet_decoder.hpp  pt_query_decoder.hpp  pt_sync.hpp  pt_time.hpp  pt_tnt_cache.hpp
decode/include/runtime/: codelets_entry.hpp  compressed_stream.hpp  jit_image.hpp  jit_section.hpp  jvm_runtime.hpp  pc_desc.hpp  pt_ild.hpp  pt_insn.hpp  scope_desc.hpp
decode/include/sideband/: pevent.hpp  sideband.hpp
decode/include/thread/: block_queue.hpp  thread_pool.hpp
decode/include/tracedata/: trace_data_parser.hpp
decode/include/utilities/: definitions.hpp
decode/src/: CMakeLists.txt  decode.cpp  main.cpp
decode/src/decoder/: decode_data.cpp  decode_data_output.cpp  decode_result.cpp  jvm_dump_decoder.cpp  output_decode.cpp  pevent.cpp  pt_ild.cpp  pt_insn.cpp  pt_jvm_decoder.cpp  ptjvm_decoder.cpp  trace_splitter.cpp
decode/src/insn/: pt_asid.cpp  pt_ild.cpp  pt_insn.cpp  pt_insn_decode.cpp  pt_retstack.cpp
decode/src/java/: analyser.cpp  block.cpp  bytecodes.cpp  class_file_parser.cpp  constant_pool.cpp  (+2 more)
decode/src/java-pt/: codelets_entry.cpp  decode_result.cpp  jit_image.cpp  jit_section.cpp  pc_desc.cpp  pt_ild.cpp  pt_insn.cpp  scope_desc.cpp
tools/grapbc/: CMakeLists.txt
tools/ptread/: CMakeLists.txt
(+301 files in other folders)
